--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
    font-family: 'Poppins' ,sans-serif;
    box-sizing: border-box;
 }
-body{
+html{
+    scroll-behavior: smooth;
+}
+ body{
   background-color: black;
   color: white;   
 }
@@ -38,7 +41,7 @@ nav ul li a{
     text-decoration: none;
     font-size: 18px;
     position: relative;
-}
+} 
 nav ul li a::after{
     content:'';
     width:0px;
@@ -67,7 +70,7 @@ nav ul li a:hover::after{
 }
 #about{
     padding: 80px 0;
-    color: #ababab; 
+    color: gray; 
 }
 .row{
     display: flex;
@@ -88,7 +91,7 @@ nav ul li a:hover::after{
 .sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: white;
+    color: gray  ;
 }
 .tab-titles{
   display: flex;
@@ -109,7 +112,7 @@ nav ul li a:hover::after{
     height: 3px; 
     background: yellow;
     position: absolute;
-    left:0;
+    left: 0;
     bottom: -8px;
     transition: 0.5s;
 
