--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ html{
     scroll-behavior: smooth;
 }
  body{
-  background-color: black;
-  color: white;   
+  background-color: white;
+  color: black;   
 }
 #header{
     width:100%;
@@ -29,6 +29,9 @@ nav{
 }
 .logo{
     width: 140px;
+}
+.header-img{
+    filter: brightness(40%);
 }
 nav ul li{
     display: inline-block;
@@ -64,80 +67,36 @@ nav ul li a:hover::after{
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
+    color:white
 }
 .header-text h1 span{
     color:yellow;
 }
+
 #about{
-    padding: 80px 0;
-    color: gray; 
+    margin:80 auto 0 auto;
+    text-align: center;
+    font-size: 500;
 }
-.row{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+#grid-layout-33 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:3em;
+    width: 80%;
+    margin: 0 auto;
 }
-.about-col-1{
-    flex-basis: 35%;
-
+#grid-layout-33 > div {
+    background-color: #f2f2f2;
+    padding: 18px;
+    text-align:center;
+    box-shadow: 0px 0px 10px #000000;
+    margin: 80px auto  40px auto;
 }
-.about-col-1 img{
-    width:100%;
-    border-radius: 15px;
-}
-.about-col-2{
-    flex-basis: 60%;
-}  
-.sub-title{
-    font-size: 60px;
-    font-weight: 600;
-    color: gray  ;
-}
-.tab-titles{
-  display: flex;
-  margin:20px 0 40px;
-}
-.tab-links{
-    margin-right: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-
-
-}
-.tab-links::after{
-    content:'';
-    width: 0;
-    height: 3px; 
-    background: yellow;
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transition: 0.5s;
-
-}
-.tab-links.active-link::after{
-    width: 50%;
-}
-.tab-contents ul li{
-    list-style:none;
-    margin:10px 0;
-
-}
-.tab-contents ul li span{
-    color:yellow;
-     font-size: 14px; 
-}
-.tab-contents{
-    display: none;
-}
-.tab-contents.active-tab{
-    display: block ;
-}
-
 #portfolio{
     padding: 50px 0;
+    
+    margin-right: 15px;
+   
 }
 
 .contact-left{
@@ -180,12 +139,13 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: grey;
+    background: whitesmoke;
     padding:15px;
     margin:15px 0;
-    color:#fff;
+    color:black;
     font-size: 18px;
     border-radius: 6px;
+    
 
 }
 .copyright{
@@ -196,3 +156,9 @@ form input, form textarea{
     font-weight: 300;
     margin-top: 20px;
 }
+button {
+    background-color: #f2f2f2;
+    padding: 10px 20px;
+    margin: 10px;
+  }
+  
