--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav ul li a:hover::after{
 }
 
 #about{
-    margin:80 auto 0 auto;
+    margin:80px auto 0 auto;
     text-align: center;
     font-size: 500;
 }
