--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav ul li a:hover::after{
     color:white
 }
 .header-text h1 span{
-    color:yellow;
+    color:red;
 }
 
 #about{
@@ -117,7 +117,7 @@ nav ul li a:hover::after{
     margin-top: 30px;
 }
 .contact-left p i{
-    color:yellow;
+    color:red;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -133,7 +133,7 @@ nav ul li a:hover::after{
     transition:transform 0.5s;
 }
 .social-icons a:hover{
-    color:yellow;
+    color:red;
     transform: translateY(-5px);
 
 }
