--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@ html{
 }
  body{
   background-color: white;
-  color: black;  
+  color: black;
+  
+  
 }
 #header{
     width:100%;
     height:100vh;
-    background-image:url(images/technology-background.jpg);
+    background-image:url(images/background.jpg);
     background-size: cover;
     background-position:center;
 }
@@ -30,7 +32,6 @@ nav{
 .logo{
     width: 140px;
 }
-
 
 nav ul li{
     display: inline-block;
