--- a/style.css
+++ b/style.css
@@ -23,42 +23,53 @@ html{
 .container{
    padding: 10px 10%;
 }
-nav{
-    display:flex;
-    align-items: center; 
-    justify-content:space-between;
-    flex-wrap: wrap ;
-}
+
+
 .logo{
     width: 140px;
+    float:left;
+    position:fixed;
+    margin:16px 36px;
+   
+    
+   
+}
+nav{
+     position:fixed;
+     width: 100%;
+}
+nav ul{
+    list-style: none;
+    background: rgba(0,0,0,0);
+    overflow: hidden;
+    color:white;
+    text-align:center;
+    margin:0;
+    transition: 1s;
+
+
 }
 
+nav.black ul{
+    background: gray;
+}
 nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-
+    display:inline-block;
+    padding:20px;
 }
 nav ul li a{
-    color: #f2f2f2;
     text-decoration: none;
+    color:white;
     font-size: 18px;
-    position: relative;
-} 
-nav ul li a::after{
-    content:'';
-    width:0px;
-    height:3px;  
-    background: yellow;
-    position: absolute;
-    left:0; 
-    bottom: -6px;
-    transition:0.5s;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
 
-}
-nav ul li a:hover::after{
-    width:100% 
-}
+
+    
+
+
 .header-text{
     margin-top: 20%;
     font: size 20px;
