--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html{
     width: 140px;
     float:left;
     position:fixed;
-    margin:16px 36px;
+    margin:14px 30px;
    
     
    
@@ -37,6 +37,7 @@ html{
 nav{
      position:fixed;
      width: 100%;
+     top:0;
 }
 nav ul{
     list-style: none;
@@ -46,6 +47,8 @@ nav ul{
     text-align:center;
     margin:0;
     transition: 1s;
+    
+
 
 
 }
@@ -55,7 +58,7 @@ nav.black ul{
 }
 nav ul li{
     display:inline-block;
-    padding:20px;
+    padding: 5px;
 }
 nav ul li a{
     text-decoration: none;
@@ -63,7 +66,7 @@ nav ul li a{
     font-size: 18px;
     font-family: sans-serif;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
 }
 
 
@@ -182,5 +185,14 @@ button {
     display: inline-block;
     cursor: pointer;
 
-  }
-  
+}
+
+
+/*--------- css for small screens -----*/
+@media only screen and (max-with:600px){
+    #header{
+        background-image: url(images/technology-background.jpg);
+
+
+    }
+}
