--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ nav{
      position:fixed;
      width: 100%;
      top:0;
+     margin-bottom: 10px;
+    
 }
 nav ul{
     list-style: none;
@@ -46,7 +48,7 @@ nav ul{
     color:white;
     text-align:center;
     margin:0;
-    transition: 1s;
+    transition: 0.5s;
     
 
 
@@ -55,10 +57,11 @@ nav ul{
 
 nav.black ul{
     background: gray;
+    float: left;
 }
 nav ul li{
     display:inline-block;
-    padding: 5px;
+    padding: 7px;
 }
 nav ul li a{
     text-decoration: none;
@@ -67,6 +70,7 @@ nav ul li a{
     font-family: sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px;
+    
 }
 
 
